--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_storage: ^4.0.0
+  firebase_analytics: ^6.0.0
+  firebase_auth: ^0.18.0+1
+  firebase_core: ^0.5.0
   provider: ^4.3.2+2
 
 
