--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
   provider: ^4.3.2+2 
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
